<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_blue">

    <ScrollView
        android:background="@drawable/bg_blue"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_marginBottom="30dp"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@drawable/fragment_bg"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- TODO: Update blank fragment layout -->
        <TextView
            android:padding="10dp"
            android:background="#16a085"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"
            android:text="@string/bro1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:background="#2980b9"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"
            android:text="@string/bro2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:background="#8e44ad"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"
            android:text="@string/bro3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:background="#e67e22"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"
            android:text="@string/bro4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:background="#e74c3c"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"
            android:text="@string/bro5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_marginBottom="40dp"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:background="#22a6b3"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"
            android:text="@string/bro6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    </ScrollView>
</FrameLayout>