<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@drawable/bg_blue"
    tools:context=".Main2Activity">

    <LinearLayout
        android:id="@+id/tabs_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtMoney"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="15dp"
            android:text="@string/the_money"
            android:textColor="@color/colorTabLight"
            android:textSize="20sp" />

        <TextView
            android:textSize="20sp"
            android:id="@+id/txtSpend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="15dp"
            android:text="@string/the_spend"
            android:textColor="@color/colorTabLight" />

        <TextView
            android:textSize="20sp"
            android:id="@+id/txtNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="15dp"
            android:text="@string/the_note"
            android:textColor="@color/colorTabLight" />
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/mainPager2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp">

    </android.support.v4.view.ViewPager>

</RelativeLayout>