<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="40dp"
    android:background="@color/colorPrimary"
    tools:context=".ResetPassActivity">

    <EditText
        android:id="@+id/textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_shape"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp" />

    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/buttonPasswordReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_style"
        android:text="@string/reset_password"
        android:textAllCaps="false"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="169dp"
        tools:layout_editor_absoluteY="345dp" />

    <Button
        android:onClick="btnBackReset"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_style"
        android:text="@string/back"
        android:textAllCaps="false"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="169dp"
        tools:layout_editor_absoluteY="345dp" />

    <ProgressBar
        android:id="@+id/progressResetPass"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-130dp"
        android:indeterminate="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</LinearLayout>
