<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/colorPrimary"
    tools:context=".AddTask">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:fontFamily="cursive"
        android:text="@string/new_add"
        android:textColor="#FFF"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:targetApi="jelly_bean" />

    <ProgressBar
        android:id="@+id/progressAdd"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:indeterminate="true"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1">

            <!-- everything you already have -->


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:background="#D6A2E8"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/add_new_money"
                android:textColor="#2C3A47"
                android:textSize="24sp"
                android:textStyle="bold"/>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/layoutInputPrice"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editPriceTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_shape"
            android:digits="0123456789"
            android:ems="10"
            android:hint="@string/enter_number"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="#000"
            android:textSize="24sp" />

          </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/layoutInputMoney"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content">

            <EditText
                android:ems="10"
                android:id="@+id/editMoneyTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_shape"
                android:hint="@string/how_much"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="#000"
                android:textSize="24sp" />

        </android.support.design.widget.TextInputLayout>
            <Button
                android:id="@+id/btnAddMoney"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@drawable/btn_style"
                android:text="@string/add"
                android:textAllCaps="false"
                android:textColor="#000"
                android:textSize="22sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="#B33771" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:background="#ffb8b8"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/add_new_spend"
                android:textColor="#2C3A47"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layoutInputSpendPrice"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content">

            <EditText
                android:ems="10"
                android:digits="0123456789"
                android:inputType="text"
                android:id="@+id/editSpendPriceTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_shape"
                android:hint="@string/enter_number"
                android:padding="10dp"
                android:textColor="#000"
                android:textSize="24sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layoutInputSpend"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content">

            <EditText
                android:ems="10"
                android:id="@+id/editSpendTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_shape"
                android:hint="@string/how_much"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="#000"
                android:textSize="24sp" />

        </android.support.design.widget.TextInputLayout>
            <Button
                android:id="@+id/btnAddSpend"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@drawable/btn_style"
                android:text="@string/add"
                android:textAllCaps="false"
                android:textColor="#000"
                android:textSize="22sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="#B33771" />

        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="10dp"
                android:background="#ffda79"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/add_new_note"
                    android:textColor="#2C3A47"
                    android:textSize="24sp"
                    android:textStyle="bold"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/layoutInputTitle"
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content">

                <EditText
                    android:ems="10"
                    android:inputType="text"
                    android:id="@+id/editTitleTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext_shape"
                    android:hint="@string/enter_title"
                    android:padding="10dp"
                    android:textColor="#000"
                    android:textSize="24sp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/layoutInputNote"
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content">

                <EditText
                    android:ems="10"
                    android:id="@+id/editNoteTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext_shape"
                    android:hint="@string/how_much"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="#000"
                    android:textSize="24sp" />

            </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btnAddNote"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:background="@drawable/btn_style"
                    android:text="@string/add"
                    android:textAllCaps="false"
                    android:textColor="#000"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="20dp"
                    android:background="#B33771" />

            </LinearLayout>

        </TableLayout>
    </ScrollView>
</LinearLayout>