<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginTop="20dp"
    android:background="#dfe4ea"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".SangleNoteActivity">

    <TextView
        android:id="@+id/titleSangleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginBottom="5dp"
        android:background="@drawable/btn_style"
        android:gravity="start"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:text="@string/the_money"
        android:textColor="#dfe4ea"
        android:textSize="26sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent" />

    <TextView
        android:id="@+id/noteSangleView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/the_money"
        android:textColor="#2c3e50"
        android:textSize="24sp" />

    <LinearLayout
        android:id="@+id/lyImages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="end"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nameSangleView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/the_money"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/timeSangleView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/the_money"
            android:textColor="#7f8fa6"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#BDC581"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <ImageButton
            android:id="@+id/deleteSangleNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/ic_delete_item"
            android:contentDescription="@string/app_name"
            android:text="@string/the_money"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="invisible" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/cant_not_edit"
        android:textColor="#ff6348"
        android:textSize="40sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="120dp"
            android:layout_height="140dp"
            android:background="@drawable/notes_icon"
            android:contentDescription="@string/app_name"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>